# mail-triage

./: LICENSE  README.md  invoke.ps1  pyproject.toml  sonar-project.properties
.github/workflows/: deploy-pages.yml
docs/: README.md  index.html  styles.css
src/mail_triage_cli/: __init__.py  __main__.py  cli.py  config.py  models.py  output.py  repository.py  service.py
src/mail_triage_cli.egg-info/: SOURCES.txt  requires.txt
tests/: test_cli.py
