[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-triage"
version = "0.1.0"
description = "Microsoft 365 inbox triage and delegated mail actions for Midtown's toy chest"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "Thomas Bray", email = "thomas.bray@midtown.net"}]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "mtg-microsoft-auth @ git+https://github.com/Midtown-Technology-Group/mtg-microsoft-auth.git@main",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
mail-triage = "mail_triage_cli.cli:main"

[project.urls]
Homepage = "https://midtown-technology-group.github.io/mail-triage/"
Documentation = "https://midtown-technology-group.github.io/mail-triage/"
Repository = "https://github.com/Midtown-Technology-Group/mail-triage"
Issues = "https://github.com/Midtown-Technology-Group/mail-triage/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
